<resources>
    <string name="app_name">Password Manager</string>
    <string name="main_subtitle">by Dragontino</string>
    <string name="app_version">Версия 7.0.0 от 28 июля 2023</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="copy_text_successful">Скопировано в буфер обмена</string>
    <string name="copy_text_exception">Не удалось скопировать текст по причине: %s</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="hide">Скрыть</string>
    <string name="close_app">Для выхода из приложения нажмите ещё раз</string>
    <string name="app_label">Менеджер паролей</string>
    <string name="website_label">Сайт</string>
    <string name="bank_label">Банковская карта</string>
    <string name="search_label">Поиск</string>
    <string name="all_notes">Все записи</string>
    <string name="websites">Сайты</string>
    <string name="bank_cards">Банковские карты</string>
    <string name="password_generation">Генератор паролей</string>
    <string name="settings">Настройки</string>
    <string name="identification">Идентификация</string>
    <string name="authentication">Аутентификация</string>
    <string name="registration">Регистрация</string>
    <string name="go_next">Далее</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегестрироваться</string>
    <string name="enter_email">Введите адрес электронной почты</string>
    <string name="invalid_email">Введите корректный email адрес!</string>
    <string name="username_placeholder">Имя пользователя (необязательно)</string>
    <string name="invalid_password">Длина пароля должна быть > 6 символов!</string>
    <string name="register_successful">Новый пользователь успешно добавлен!</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="repeat_password">Введите пароль ещё раз</string>
    <string name="change_login">Войти в другой аккаунт</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="password_reset">Новый пароль отправлен вам на почту!</string>
    <string name="create_record">Создать новую запись</string>
    <string name="search_no_results">Поиск не дал результатов</string>
    <string name="empty_query">Начните вводить запрос</string>
    <string name="empty_data_list">Нажмите на «+» для добавления новых записей</string>
    <string name="new_note">Новая запись</string>
    <string name="invalid_address">Адрес %s — некорректный!</string>
    <string name="deletion_data_success">Данные о записи «%s» удалены</string>
    <string name="dark_theme">Тёмное</string>
    <string name="light_theme">Светлое</string>
    <string name="system_theme">Как на устройстве</string>
    <string name="auto_theme">По времени</string>
    <string name="now">(сейчас %s)</string>
    <string name="switchThemeText">Оформление:</string>
    <string name="sunrise_time">Время рассвета</string>
    <string name="sunset_time">Время заката</string>
    <string name="url_address">Адрес сайта</string>
    <string name="name_website">Название</string>
    <string name="account_start">Аккаунт №%d</string>
    <string name="account_name_placeholder">Название аккаунта</string>
    <string name="account">Аккаунт</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="comment">Комментарий</string>
    <string name="add_account">Добавить аккаунт</string>
    <string name="autofill_name_website">Автозаполнение</string>
    <string name="empty_url">Введите URL сайта</string>
    <string name="empty_website_name">Введите название сайта</string>
    <string name="empty_login">Введите логин</string>
    <string name="empty_password">Введите пароль</string>
    <string name="invalid_data">Введите корректные данные!</string>
    <string name="too_long_url">Длина URL должна быть не более %d символов</string>
    <string name="show_password">Показать пароль</string>
    <string name="hide_password">Скрыть пароль</string>
    <string name="button_open_url">Открыть в браузере</string>
    <string name="edit">Редактировать</string>
    <string name="rename_data">Переименовать</string>
    <string name="cancel_renaming_data">Сохранить новое название</string>
    <string name="copy_info">Копировать</string>
    <string name="delete_data">Удалить</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="more_info">Больше информации</string>
    <string name="bank_card_hint">Банковская карта №%d</string>
    <string name="bank_name">Название банка</string>
    <string name="bank_head">Основные данные</string>
    <string name="card">Карта</string>
    <string name="card_number">Номер карты</string>
    <string name="card_holder">Владелец карты</string>
    <string name="validity_period">Срок действия</string>
    <string name="payment_system">Платёжная система</string>
    <string name="card_cvv">CVC2/CVV2</string>
    <string name="pin_code">PIN</string>
    <string name="add_more_cards">Добавить карту</string>
    <string name="optionally">Дополнительно</string>
    <string name="wrong_month">Неправильный номер месяца!</string>
    <string name="beautiful_font">Использовать в оформлении красивый шрифт</string>
    <string name="dynamic_color">Использовать в оформлении динамические цвета</string>
    <string name="dynamic_color_desc">Цветовая палитра приложения автоматически адаптируется и интегрируется с пользовательскими настройками</string>
    <string name="pull_to_refresh">Включить обновление по свайпу</string>
    <string name="pull_to_refresh_desc">
        При свайпе вверх за пределы экрана будет вызываться обновление
        данных или возврат к предыдущему экрану (в зависимости от текущего экрана)
    </string>
    <string name="load_icons">Подгружать иконки в главном меню </string>
    <string name="changing_password_success">Пароль для учетной записи успешно сменен!</string>
    <string name="vk">Вконтакте</string>
    <string name="telegram">Telegram</string>
    <string name="github">GitHub</string>
    <string name="email">Почта</string>
    <string name="feedback">Обратная связь</string>
    <string name="current_user">Вы вошли под именем</string>
    <string name="edit_username">Редактировать имя пользователя</string>
    <string name="change_password">Сменить пароль</string>
    <string name="check_app_updates">Проверить наличие обновлений</string>
    <string name="current_app_version_is_latest">Текущая версия является актуальной</string>
    <string name="update_available">Доступно обновление приложения до версии</string>
    <string name="downloading_update_instructions">
        Чтобы скачать его, скачайте .apk файл на устройство по ссылке ниже:
    </string>
    <string name="current_version_number">Текущий номер версии: %s</string>
    <string name="latest_version_number">Номер последней версии: %s</string>
    <string name="changing_password">Смена пароля</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_repeated_password">Повторите пароль</string>
    <string name="password_length_selection">Длина пароля</string>
    <string name="save">Сохранить</string>
    <string name="cancel_action">Отменить</string>
    <string name="cancel">Отмена</string>
    <string name="do_not_save">Не сохранять</string>
    <string name="unsaved_data">У вас есть несохранённые данные. Сохранить?</string>
    <string name="confirm_delete">Подтверждение удаления</string>
    <string name="changing_username_placeholder">Новое имя пользователя</string>
    <string name="username">Имя пользователя</string>
    <string name="deletion_data_confirmation">Удалить данные о записи «%s»?</string>
    <string name="deletion_website_confirmation">Вы уверены, что хотите удалить данные о сайте "%s"?</string>
    <string name="deletion_last_account_confirmation">
        Удаление данных об этом аккаунте приведёт к удалению данных <u>обо всем сайте</u>. Продолжить?
    </string>
    <string name="confirm_action">Подтверждение действия</string>
    <string name="changing_password_confirmation">Вы уверены, что хотите сменить пароль?</string>
    <string name="telegram_ref">https://t.me/dragontino</string>
    <string name="vk_ref">https://vk.com/sergiovonpeter</string>
    <string name="github_ref">https://github.com/dragontino/PasswordManager</string>
    <string name="email_ref">mailto:petrovsd2002@gmail.com</string>
    <string name="cannot_find_website_title">Не удалось узнать заголовок сайта %s</string>
    <string name="change_theme_exception">
        Не удалось сменить оформление. Проверьте, что вы вошли в аккаунт и повторите попытку позже
    </string>
    <string name="change_time_exception">
        Не удалось сменить время. Проверьте, что вы вошли в аккаунт и повторите попытку позже
    </string>
    <string name="change_setting_exception">
        Не удалось сменить настройку. Проверьте, что вы вошли в аккаунт и повторите попытку позже
    </string>
    <string name="user_not_authenticated_exception">Вход в аккаунт не выполнен!</string>
    <string name="cannot_find_settings">Не удалось найти сохранённых настроек в базе данных</string>
    <string name="cannot_find_info">Не удалось найти запрашиваемой информации в базе данных</string>
    <string name="server_request_error">Запрос к серверу вернулся с ошибкой: %d %s</string>
    <string name="cannot_add_data">Вход в аккаунт не выполнен, невозможно добавить данные</string>
    <string name="cannot_fetch_data">Не удалось извлечь данные</string>
    <string name="cannot_delete_account">Не удалось удалить аккаунт</string>
    <string name="cannot_delete_data">Не удалось удалить данные</string>
    <string name="failed_to_connect_to_server">Не удалось подключиться к серверу</string>
    <string name="load_icon_exception">Не удалось загрузить иконку с url %s. Код ответа: %d</string>
    <string name="register_failed">
        Не получилось зарегестрироваться. Попробуйте, пожалуйста, ещё раз или напишите разработчикам. Название ошибки: %s
    </string>
    <string name="login_failed">
        Не получилось войти в аккаунт. Проверьте корректность введённых данных. Название ошибки: %s
    </string>
    <string name="password_not_reset">
        Не получилось сбросить пароль 😞. Проверьте <b>интернет-соединение</b> или напишите к разработчикам, нажав кнопку в правом верхнем углу
    </string>
    <string name="passwords_is_not_equals">Пароли не совпадают</string>
    <string name="check_internet_connection">Проверьте интернет соединение</string>
    <string name="incorrect_email">Неверный email адрес</string>
    <string name="incorrect_password">Неверный пароль</string>
    <string name="user_disabled_exception">
        Действие данной учетной записи приостановлено. За дополнительными разъяснениями, обратитесь к разработчикам!
    </string>
    <string name="too_many_requests_exception">
        Мы заблокировали все запросы с этого устройства из-за необычной активности. Попробуйте еще раз позже. [ Доступ к этой учетной записи был временно отключен из-за множества неудачных попыток входа в систему. Вы можете немедленно восстановить его, сбросив свой пароль, или повторить попытку позже. ]
    </string>
    <string name="change_username_successful">Имя пользователя успешно изменено!</string>
    <string name="change_username_exception">
        Не получилось сменить имя пользователя. Проверьте, что вы вошли в аккаунт
    </string>
    <string name="password_generation_exception">Выберите хотя бы одну опцию, чтобы создать пароль</string>
    <string name="password_length_exception">Длина пароля должна быть хотя бы 4 символа</string>
    <string name="check_app_updates_exception">Возникала ошибка при попытке узнать информацию о последней версии приложения</string>
</resources>