<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:background="@drawable/data_element_background">

    <EditText
        android:id="@+id/name_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AccountHeadingTheme"
        android:inputType="none"
        tools:ignore="Autofill,LabelFor"/>

    <TextView
        android:id="@+id/login_head"
        style="@style/MainTextViewTheme"
        android:text="@string/login"
        android:textSize="@dimen/head_size" />

    <include
        android:id="@+id/login"
        layout="@layout/text_view_field"/>

    <TextView
        android:id="@+id/password_head"
        style="@style/MainTextViewTheme"
        android:text="@string/password"
        android:textSize="@dimen/head_size" />

    <include
        android:id="@+id/password"
        layout="@layout/text_view_field"/>

    <TextView
        android:id="@+id/comment_head"
        style="@style/MainTextViewTheme"
        android:text="@string/comment"
        android:textSize="@dimen/head_size" />

    <include
        android:id="@+id/comment"
        layout="@layout/text_view_field"/>

    <Button
        android:id="@+id/button_open_url"
        style="@style/MainTextViewTheme"
        android:text="@string/button_open_url" />

</LinearLayout>