<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    app:cardElevation="30dp"
    style="@style/card_view_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name_account"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                style="@style/AccountHeadingTheme"
                android:inputType="text"
                android:text="@string/account_start"
                android:focusable="true"
                android:nextFocusDown="@id/login"
                tools:ignore="Autofill,LabelFor" />

            <ImageButton
                android:id="@+id/edit_name_of_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:background="@color/data_background_color"
                android:contentDescription="@string/rename_data"
                android:src="@drawable/ic_action_more"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>



        <EditText
            android:id="@+id/login"
            style="@style/AccountTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/login"
            android:hint="@string/login"
            android:inputType="textNoSuggestions"
            android:nextFocusDown="@id/password"
            android:textIsSelectable="true"
            tools:ignore="TextContrastCheck" />

        <com.security.passwordmanager.view.customviews.PasswordView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:text="@string/password"
            android:hint="@string/password"
            android:nextFocusDown="@id/comment"/>

        <EditText
            android:id="@+id/comment"
            style="@style/AccountTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/comment"
            android:hint="@string/comment"
            android:inputType="text"
            android:textIsSelectable="true"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.cardview.widget.CardView>