<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bank.BankCardActivity_old">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AccountTextViewTheme"
            android:hint="@string/bank_name"
            android:inputType="text"
            android:autofillHints="name"/>

        <TextView
            android:id="@+id/bank_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_head"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_vertical_margin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bank_card_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/raspberry"
                android:text="@string/add_account"
                android:textSize="15sp"
                android:layout_marginEnd="6dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/add_card"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textAllCaps="false"
                android:textColor="@color/raspberry"
                android:textSize="15sp"
                android:text="@string/add_more_cards"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>