<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:background="@drawable/data_element_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_account"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/AccountHeadingTheme"
            android:inputType="text"
            android:text="@string/account_start"
            android:focusable="true"
            android:nextFocusDown="@id/login"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/edit_name_of_account"
            android:layout_weight="3"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/ic_action_more"/>

    </LinearLayout>

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AccountTextViewTheme"
        android:background="@drawable/text_view_gray_style"
        android:layout_marginHorizontal="6dp"
        android:hint="@string/login"
        android:inputType="textNoSuggestions"
        android:textIsSelectable="true"
        android:autofillHints="@string/login"
        android:nextFocusDown="@id/password"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/password"
            style="@style/AccountTextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:autofillHints="@string/password"
            android:background="@drawable/text_view_gray_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/comment"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/password_visibility"
            style="@style/UtilityButtons"
            android:contentDescription="@string/show_password"
            android:src="@drawable/visibility_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AccountTextViewTheme"
        android:background="@drawable/text_view_gray_style"
        android:textIsSelectable="true"
        android:layout_marginHorizontal="6dp"
        android:hint="@string/comment"
        android:inputType="text"
        android:autofillHints="@string/comment"/>

</LinearLayout>