<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_of_account"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/account_hint"
            android:textColorHint="@android:color/darker_gray"
            android:text="@string/account_start"
            android:textIsSelectable="true"
            android:focusable="true"
            android:nextFocusDown="@id/edit_text_login"
            android:cursorVisible="false"
            android:enabled="false"
            android:autofillHints="@string/account_hint" />

        <Button
            android:id="@+id/edit_name_of_account"
            android:layout_weight="3"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/ic_action_more"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AccountTextViewTheme"
        android:background="@drawable/text_view_gray_style"
        android:layout_marginHorizontal="6dp"
        android:hint="@string/login"
        android:inputType="textNoSuggestions"
        android:textIsSelectable="true"
        android:autofillHints="@string/login"
        android:nextFocusDown="@id/edit_text_password"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/AccountTextViewTheme"
            android:layout_margin="0dp"
            android:autofillHints="@string/password"
            android:background="@drawable/text_view_gray_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/edit_text_comment"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/field_item_button_visibility"
            style="@style/UtilityButtons"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_visibility_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_text_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AccountTextViewTheme"
        android:background="@drawable/text_view_gray_style"
        android:textIsSelectable="true"
        android:layout_marginHorizontal="6dp"
        android:hint="@string/comment"
        android:inputType="text"
        android:autofillHints="@string/comment"/>

</LinearLayout>